--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
 			fx: "backout",
 			speed: 700,
 			click: function(event, menuItem) {
-				return true;
+				return false;
 			}
 		});
 	});
+function getUrl(url){
+	$.get(url,function(data){
+		$('#content').html(data);
+	});
+}
+function openUrl(url){
+	window.open(url);
+}
 </script>
 </head>
 <body>
@@ -35,16 +43,16 @@
 			</div>
 			<div class="header_navigation">
 				<ul class="mainmenuslide">
-					<li><a href="./index.html" >个人简介</a></li>
-					<li><a href="./learn.html">学习经历</a></li>
-					<li><a href="./job.html">工作经历</a></li>
-					<li><a href="http://www.cnblogs.com/ouzhenzhou/" target="_blank" >Blog</a></li>
+					<li><a onclick="getUrl('./me.html?ASDf');"  href="./index.html" >个人简介</a></li>
+					<li><a onclick="getUrl('./learn.html');"  href="./learn.html">学习经历</a></li>
+					<li><a onclick="getUrl('./job.html');"    href="./job.html">工作经历</a></li>
+					<li><a onclick="openUrl('http://www.cnblogs.com/ouzhenzhou/');"href="http://www.cnblogs.com/ouzhenzhou/" target="_blank" >Blog</a></li>
 				</ul>
 			</div><!-- end header_navigation-->
 		</div><!-- end header -->
 		<br />
 		<div id="content">
-			<table border="0" cellpadding="0" width="60%">
+			<table border="0" cellpadding="0" width="100%">
 				<tr>
 					<td>姓名</td>
 					<td>欧镇洲</td>
@@ -73,11 +81,26 @@
 					<td>QQ</td>
 					<td>408888253</td>
 				</tr>
+				<tr>
+					<td>自我评价</td>
+					<td>
+1.精通WAMP结构开发  <br />
+2.熟悉html、css、jquery、ajax  <br />
+3.熟练使用eclipse、vim等编辑器的开发 <br />
+4.热爱团队化开发 <br /><br />
+
+相信产品是有灵魂的,努力做出更多有高尚灵魂的产品; <br />
+很多东西不懂,可以直接Google,度娘,但真正Cool的点子和想法得用心学习和积累才能得到; <br />
+物以类聚,人以群分.只有拥有同样追求的人才会真正走到一起拼搏! <br />
+技术就是一场没有终点的游戏，最重要的是玩的开心和精彩！ <br />
+Fighting! <br />
+
+过完年就准备换工作了，希望还能留在游戏行业~ <br />
+					</td>
+				</tr>
 			</table>
 		</div><!-- end content -->
-		<div id="footer">
-			Is Me,Is You.Where Are Us?
-		<div>
+	
 		
 	</div>
 	<br />
